Fix search input on Safari (#69)

--- a/_assets/stylesheets/_components/_forms.scss
+++ b/_assets/stylesheets/_components/_forms.scss
@@ -9,7 +9,7 @@
 
 .header__search {
   .search-input {
-    -webkit-appearance: searchfield;
+    -webkit-appearance: none;
     background-color: white;
     border-radius: $global-radius;
     box-shadow: 0 2px 4px rgba(black, .15);
